@@ -1,3 +1,7 @@
+2006-06-23  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* libgloss.exp (find_gnatmake): Rewrite.
+
 2006-03-30  Daniel Jacobowitz  <dan@codesourcery.com>
 
 	* rsh.exp (rsh_exec): Handle inp and outp arguments.  Use
